--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,6 +26,27 @@
 /*    rgb(var(--background-start-rgb));*/
 /*}*/
 
+/* width */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
